--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2021"
 license = "MIT"
 
 [dependencies]
+anyhow = "1.0"
 argh = "0.1"
 glob = "0.3"
+itertools = "0.14.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
-anyhow = "1.0"
+toml = "0.9"
